--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,16 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+
+
         {% include header.html %}
         <main class="cd-main-content">
+            <div class="deprecation-banner">
+                <div class="deprecation-banner__content">
+                    This website is part of a finished project by the Open Knowledge Foundation Germany and is no longer being updated.
+                    The current legal notice and privacy policy can be found at <a href="https://okfn.de/impressum">okfn.de/impressum</a>.
+                </div>
+            </div>
             {{ content }}
 
             {% include footer.html %}
